<resources>
    <string name="app_name">校园助手</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">课程</string>
    <string name="title_notifications">提醒</string>
    <string name="name">姓名</string>
    <string name="title_activity_tab">tabActivity</string>
    <string name="action_settings">设置</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_regist">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱地址</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_name">名字</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_regist">注 册</string>
    <string name="action_sign_in_short">登 陆</string>
    <string name="action_regist_short">登陆</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这儿得填</string>
    <string name="permission_rationale">权限错误</string>
    <string name="title_activity_regist2">注册</string>
    <string name="request_failed">请求失败，请重试</string>
    <string name="home_info">四度春风化绸缪，几番秋雨洗鸿沟。\n黑发积霜织日月，粉笔无言写春秋。\n蚕丝吐尽春未老，烛泪成灰秋更稠。\n春播桃李三千圃，秋来硕果满神州。</string>
</resources>
