<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:theme="@style/LoginTheme"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="服务器ip"
            android:textColorHint="@color/color_hint"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:layout_marginTop="32dp"
            >

            <EditText
                android:id="@+id/login_et1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="端口"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/color_hint"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/login_et2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/prompt_email"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/color_hint"
            app:hintEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="teacher@qq.com"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/color_hint"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="111111"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_bt"
            android:text="@string/action_sign_in_short"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            />

        <Button
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_bt"
            android:text="@string/action_regist"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            />
    </LinearLayout>
</RelativeLayout>
